# OM-rl

./: .env  .gitignore  build_omsim.sh  pyproject.toml
configs/: default.yaml
om_rl/complexity/: evaluator.py  structure_scorer.py
om_rl/env/: environment.py  interactive.py  observation.py  reward.py
om_rl/puzzle_gen/: chemistry.py  generator.py  molecule_builder.py  puzzle_writer.py  validator.py
om_rl/tinker/: env.py
om_rl/training/: config.py  dataset.py  eval.py  rollout.py  trainer.py
om_rl/utils/: logging.py
scripts/: evaluate.py  generate_puzzles.py  interactive_debug.py  measure_token_usage.py  pod.sh  setup_cloud.sh  smoke_test.py  train.py  train_tinker.py
tests/: test_puzzle_gen.py
