[project]
name = "om-rl"
version = "0.1.0"
description = "RL training pipeline for Opus Magnum puzzle solving"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "trl>=0.8",
    "peft>=0.10",
    "datasets",
    "pyyaml",
    "networkx",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
# Self-managed GPU training (RunPod, Lambda, etc.)
runpod = ["torch>=2.1", "transformers>=4.45,<5", "trl>=0.12,<1", "peft>=0.13,<1",
          "bitsandbytes>=0.44,<0.45", "accelerate>=1.0,<2"]
# Tinker RL-as-a-service
tinker = ["tinker-cookbook"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["om_rl*", "vendor*"]

[tool.ruff]
line-length = 100
